EDSC-1161: Fixed API endpoint :visited pseudo-class color; Adjusted position of the collection collapse icon trigger; Cleaned up design and layout of primary search field and related filter dropdowns.

--- a/app/assets/stylesheets/modules/buttons.css.scss
+++ b/app/assets/stylesheets/modules/buttons.css.scss
@@ -121,7 +121,15 @@
 .primary-search {
   a.button {
     color: #222;
-    padding: 14px;
+    padding: 15px 10px;
+    border-left: 1px solid #ecf0f1;
+  }
+  a.clear-filters {
+    padding: 15px;
+  }
+
+  a:hover {
+    color: #3498db;
   }
 }
 
