--- a/app/assets/stylesheets/modules/dropdown.css.scss
+++ b/app/assets/stylesheets/modules/dropdown.css.scss
@@ -134,7 +134,7 @@ input.day-of-year-input {
   }
 
   .fa-caret-down {
-    padding-left: 5px;
+    padding-left: 2px;
     color: rgba(0,0,0,0.2);
     @include transition(all 0.2s ease-in-out);
 
