--- a/app/assets/stylesheets/modules/nlp_parsing.css.scss
+++ b/app/assets/stylesheets/modules/nlp_parsing.css.scss
@@ -4,11 +4,9 @@
 
 .toolbar {
   .keyword-input {
-    padding: .5em;
-    margin: 2px 0 0 20px;
+    padding: 10px;
+    margin: 0 0 0 10px;
+    border: none;
     width: $toolbar-search-field-width;
-    border: 1px solid $toolbar-accent-border;
-    border-radius: 3px;
-    box-shadow: inset 0 1px 5px 1px rgba(0,0,0,0.2);
   }
 }
