--- a/app/assets/stylesheets/modules/toolbar.css.scss
+++ b/app/assets/stylesheets/modules/toolbar.css.scss
@@ -73,9 +73,9 @@ a.remove-filter {
 }
 
 .landing-toolbar-content {
-  background: none;
+  background: #fff;
 
   .primary-search {
-    background: rgba(255,255,255,0.9);
+    background: none;
   }
 }
